--- a/packages/brewfile
+++ b/packages/brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "isacikgoz/taps"
 tap "vitorgalvao/tiny-scripts"
+tap "homebrew/cask-fonts"
 
 # brew "fwartner/tap/mac-cleanup"
 brew "antigen"
@@ -21,6 +22,7 @@ brew "fx"
 brew "fzf"
 brew "gh"
 brew "git"
+brew "git-filter-repo"
 brew "grc"
 brew "grep"
 brew "imagemagick"
@@ -53,6 +55,7 @@ cask "beardedspice"
 cask "brave-browser"
 cask "figma"
 cask "firefox"
+cask "font-hack-nerd-font"
 cask "google-backup-and-sync"
 cask "handbrake"
 cask "imageoptim"
