--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,12 +10,12 @@
 - clean: ["~"]
 
 - link:
-    ~/.gitconfig: gitconfig
     ~/.zshrc: shell/zshrc
     ~/.zshenv: shell/zshenv
     ~/.zprofile: shell/zprofile
     ~/.antigenrc: shell/antigenrc
     ~/.brewfile: packages/brewfile
+    ~/.gitconfig: settings/gitconfig
 
 - shell:
     - command: sh scripts/cj.sh
@@ -31,7 +31,7 @@
       description: Homebrew
     - command: exec zsh
       description: Reload shell
-    - command: sh scripts/node_modules.sh
+    - command: sh scripts/npm.sh
       stdin: true
       stdout: true
       description: NPM
