Add mac-cleanup to brewfile

--- a/packages/brewfile
+++ b/packages/brewfile
@@ -1,4 +1,4 @@
-# tap "fwartner/tap"
+tap "fwartner/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
@@ -6,7 +6,7 @@ tap "isacikgoz/taps"
 tap "vitorgalvao/tiny-scripts"
 tap "homebrew/cask-fonts"
 
-# brew "fwartner/tap/mac-cleanup"
+brew "fwartner/tap/mac-cleanup"
 brew "antigen"
 brew "coreutils"
 brew "curl"
