Update launch-agents + brew

--- a/packages/brewfile
+++ b/packages/brewfile
@@ -1,21 +1,22 @@
 tap "fwartner/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "isacikgoz/taps"
+tap "jesseduffield/lazygit"
+tap "shopify/shopify"
 tap "vitorgalvao/tiny-scripts"
-tap "homebrew/cask-fonts"
-
-brew "fwartner/tap/mac-cleanup"
 brew "antigen"
+brew "python@3.9"
+brew "glib"
+brew "cargo-c"
 brew "coreutils"
 brew "curl"
 brew "dockutil"
 brew "duti"
-brew "jq"
 brew "exa"
 brew "fd"
-brew "ffmpeg"
 brew "fileicon"
 brew "node"
 brew "fx"
@@ -23,54 +24,74 @@ brew "fzf"
 brew "gh"
 brew "git"
 brew "git-filter-repo"
+brew "git-standup"
 brew "grc"
 brew "grep"
-brew "imagemagick"
-brew "isacikgoz/taps/tldr"
 brew "libtool"
+brew "luajit", args: ["HEAD"]
 brew "mackup"
 brew "mas"
 brew "mkcert"
 brew "neofetch"
+brew "neovim"
 brew "nvm"
 brew "prettyping"
-brew "python"
 brew "rename"
-brew "ruby"
+brew "ripgrep"
+brew "rust"
 brew "starship"
+brew "stylua"
 brew "terminal-notifier"
 brew "tree"
-brew "vitorgalvao/tiny-scripts/calm-notifications"
+brew "unbound", link: false
 brew "webp"
 brew "wget"
 brew "yank"
 brew "youtube-dl"
 brew "zoxide"
-
+brew "fwartner/tap/mac-cleanup"
+brew "isacikgoz/taps/tldr"
+brew "jesseduffield/lazygit/lazygit"
+brew "shopify/shopify/shopify-cli"
+brew "vitorgalvao/tiny-scripts/calm-notifications"
 cask "1password"
 cask "airpass"
+cask "alacritty"
 cask "alfred"
 cask "amethyst"
 cask "beardedspice"
 cask "brave-browser"
+cask "chromium"
+cask "diffmerge"
+cask "dozer"
 cask "figma"
 cask "firefox"
 cask "font-hack-nerd-font"
 cask "google-backup-and-sync"
+cask "graphql-playground"
 cask "handbrake"
 cask "imageoptim"
 cask "iterm2"
 cask "kaleidoscope"
+cask "kap"
 cask "latest"
+cask "raycast"
 cask "rightfont"
 cask "signal"
 cask "slack"
 cask "spotify"
+cask "steam"
 cask "teamviewer"
 cask "transmission"
 cask "visual-studio-code"
 cask "whatsapp"
 cask "zoom"
-
-mas "Xcode", id: 97799835
+mas "EasyRes", id: 688211836
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "Keynote", id: 409183694
+mas "Meeter", id: 1510445899
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
 mas "Spark", id: 1176895641
+mas "Xcode", id: 497799835
