Set line-height (cell_height) in kitty

--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -167,9 +167,9 @@ font_size 16.0
 #: font glyph is rendered and the baseline at which the glyph is
 #: placed in the cell. For example::
 
-#:     modify_font cell_width 80%
-#:     modify_font cell_height -2px
-#:     modify_font baseline 3
+modify_font cell_width 100%
+modify_font cell_height 115%
+modify_font baseline 0
 
 #: Note that modifying the baseline will automatically adjust the
 #: underline and strikethrough positions by the same amount.
