--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Jetbrains Mono Regular
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+bold_font        JetBrains Mono Bold 
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
