Use custom tab_title_template for Kitty

--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -644,6 +644,7 @@ modify_font baseline 0
 #: tab that does not have focus has a bell. If you want to use leading
 #: or trailing spaces, surround the text with quotes. See
 #: tab_title_template for how this is rendered.
+# tab_title_template "{index}: {title[title.rfind('/')+1:]}"  
 
 #: For backwards compatibility, values of yes, y and true are
 #: converted to the default bell symbol and no, n, false and none are
@@ -923,7 +924,8 @@ tab_powerline_style slanted
 #: leading or trailing spaces, surround the text with quotes. See
 #: tab_title_template for how this is rendered.
 
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab} {index} {title}"
+# Add current dir (derived from active_wd) to tab title if it is different from the current tab title 
+tab_title_template "{tab.active_wd[tab.active_wd.rfind('/')+1:] if not (tab.active_wd[tab.active_wd.rfind('/')+1:] == title) else ''} {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
