--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -925,7 +925,7 @@ tab_powerline_style slanted
 #: tab_title_template for how this is rendered.
 
 # Add current dir (derived from active_wd) to tab title if it is different from the current tab title 
-tab_title_template "{tab.active_wd[tab.active_wd.rfind('/')+1:] if not (tab.active_wd[tab.active_wd.rfind('/')+1:] == title) else ''} {title}"
+tab_title_template "{index} {tab.active_wd[tab.active_wd.rfind('/')+1:] if not (tab.active_wd[tab.active_wd.rfind('/')+1:] == title) else ''}  [{title}]"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
