Update kitty config (round border)

--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -168,7 +168,7 @@ font_size 16.0
 #: placed in the cell. For example::
 
 modify_font cell_width 100%
-modify_font cell_height 115%
+modify_font cell_height 135%
 modify_font baseline 0
 
 #: Note that modifying the baseline will automatically adjust the
@@ -759,7 +759,8 @@ draw_minimal_borders yes
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes
+hide_window_decorations titlebar-only
+# macos_hide_titlebar yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -925,7 +926,7 @@ tab_powerline_style slanted
 #: tab_title_template for how this is rendered.
 
 # Add current dir (derived from active_wd) to tab title if it is different from the current tab title 
-tab_title_template "{index} {tab.active_wd[tab.active_wd.rfind('/')+1:] if not (tab.active_wd[tab.active_wd.rfind('/')+1:] == title) else ''}  [{title}]"
+tab_title_template "{index} {tab.active_wd[tab.active_wd.rfind('/')+1:] if not (tab.active_wd[tab.active_wd.rfind('/')+1:] == title) else ''} {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
