--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Jetbrains Mono Regular
-bold_font        JetBrains Mono Bold 
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      JetBrainsMono Nerd Font Mono Regular
+bold_font        JetBrainsMono Nerd Font Mono Bold 
+italic_font      JetBrainsMono Nerd Font Mono Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
