--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -992,8 +992,7 @@ tab_title_template "{index} {tab.active_wd[tab.active_wd.rfind('/')+1:] if not (
 #: Color scheme {{{
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
-include Catppuccin-Mocha.conf
+include Carbonfox_Kitty.conf
 # END_KITTY_THEME
 
 #: The color table {{{
