--- a/configs/lazygit/config.yml
+++ b/configs/lazygit/config.yml
@@ -4,10 +4,21 @@ gui:
   showRandomTip: false
   showIcons: true
   theme:
-      selectedLineBgColor:
-        - default
-        - bold
-      selectedRangeBgColor:
-        - default
-      inactiveBorderColor:
-        - white
+    lightTheme: false
+    activeBorderColor:
+      - '#a6e3a1' # Green
+      - bold
+    inactiveBorderColor:
+      - '#cdd6f4' # Text
+    optionsTextColor:
+      - '#89b4fa' # Blue
+    selectedLineBgColor:
+      - '#313244' # Surface0
+    selectedRangeBgColor:
+      - '#313244' # Surface0
+    cherryPickedCommitBgColor:
+      - '#94e2d5' # Teal
+    cherryPickedCommitFgColor:
+      - '#89b4fa' # Blue
+    unstagedChangesColor:
+      - red # Red
