Add custom commands to lazygit config
-  Add a new custom command 'C' to the lazygit configuration file
-  The 'C' command performs a git diff, copies the output, opens a Raycast AI command, and commits the changes

--- a/configs/lazygit/config.yml
+++ b/configs/lazygit/config.yml
@@ -11,3 +11,9 @@ gui:
       - '#7A7C7E' # Text
     selectedLineBgColor:
       - '#1E222A' # Surface0
+customCommands:
+  - key: 'C'
+    context: 'files'
+    command: 'git diff --cached | pbcopy; open raycast://ai-commands/git-commit-message && git commit'
+    subprocess: true
+    showOutput: true
