Update lazygit config with Raycast AI Commit command
-  Add a new custom command in the lazygit config file for Raycast AI Commit
-  The command performs a git diff, copies the result, opens a Raycast AI command, and commits the changes
-  This update enhances the usability of the lazygit tool by integrating Raycast AI for commit operations

--- a/configs/lazygit/config.yml
+++ b/configs/lazygit/config.yml
@@ -15,4 +15,5 @@ customCommands:
   - key: 'C'
     context: 'files'
     command: 'git diff --cached | pbcopy; open raycast://ai-commands/git-commit-message && git commit'
+    description: 'Raycast AI Commit'
     subprocess: true
