--- a/packages/brewfile
+++ b/packages/brewfile
@@ -1,89 +1,158 @@
+tap "1password/tap"
+tap "charmbracelet/tap"
+tap "fsouza/prettierd"
 tap "fwartner/tap"
+tap "getsentry/tools"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
+tap "homebrew/services"
 tap "isacikgoz/taps"
 tap "jesseduffield/lazygit"
-tap "shopify/shopify"
-tap "vitorgalvao/tiny-scripts"
+tap "khanhas/tap"
+tap "koekeishiya/formulae"
+tap "wez/wezterm"
+brew "act"
 brew "antigen"
-brew "python@3.9"
+brew "zstd"
+brew "little-cms2"
+brew "webp"
+brew "jpeg-xl"
+brew "aom"
+brew "python@3.12"
+brew "asciinema"
 brew "glib"
-brew "cargo-c"
+brew "at-spi2-core"
+brew "bat"
+brew "biome"
+brew "cairo"
 brew "coreutils"
 brew "curl"
+brew "deno"
+brew "dockutil"
+brew "dotenv-linter"
 brew "duti"
+brew "libuv"
+brew "node"
+brew "eslint"
 brew "exa"
 brew "fd"
+brew "unbound"
+brew "gnutls"
+brew "harfbuzz"
+brew "openjpeg"
+brew "leptonica"
+brew "tesseract"
+brew "ffmpeg"
+brew "ffmpegthumbnailer"
 brew "fileicon"
-brew "node"
 brew "fx"
 brew "fzf"
+brew "libavif"
+brew "gd"
+brew "gdk-pixbuf"
 brew "gh"
+brew "ghostscript"
 brew "git"
+brew "git-delta"
+brew "python@3.10"
 brew "git-filter-repo"
-brew "git-standup"
-brew "grc"
+brew "git-trim"
+brew "glib-networking"
+brew "glow"
+brew "gnu-sed"
 brew "grep"
+brew "gtk+3"
 brew "libtool"
-brew "luajit", args: ["HEAD"]
+brew "guile"
+brew "libheif"
+brew "libomp", link: true
+brew "imagemagick"
+brew "imlib2"
+brew "jless"
+brew "jq"
+brew "librsvg"
+brew "lua"
+brew "luajit"
+brew "luv"
 brew "mackup"
+brew "markdownlint-cli"
 brew "mas"
 brew "mkcert"
+brew "mtr"
 brew "neofetch"
 brew "neovim"
+brew "neovide"
+brew "ninja"
+brew "openjdk"
+brew "pnpm"
+brew "poppler"
+brew "prettier"
 brew "prettyping"
+brew "protobuf"
+brew "pyenv"
+brew "python@3.11"
+brew "python@3.9"
+brew "ruby-build"
+brew "rbenv"
 brew "rename"
 brew "ripgrep"
 brew "rust"
 brew "starship"
 brew "stylua"
+brew "telnet"
 brew "terminal-notifier"
+brew "tmux"
+brew "tmuxinator"
+brew "tmuxp"
+brew "toilet"
+brew "tokei"
 brew "tree"
-brew "unbound", link: false
-brew "webp"
+brew "unar"
 brew "wget"
+brew "wifi-password"
 brew "yank"
+brew "yazi"
 brew "youtube-dl"
+brew "yq"
 brew "zoxide"
+brew "zplug"
+brew "zsh"
+brew "charmbracelet/tap/mods"
 brew "fwartner/tap/mac-cleanup"
+brew "getsentry/tools/sentry-cli"
 brew "isacikgoz/taps/tldr"
 brew "jesseduffield/lazygit/lazygit"
-brew "shopify/shopify/shopify-cli"
-brew "vitorgalvao/tiny-scripts/calm-notifications"
 cask "1password"
+cask "1password-cli"
 cask "airpass"
-cask "alacritty"
-cask "alfred"
 cask "amethyst"
-cask "beardedspice"
-cask "brave-browser"
 cask "chromium"
 cask "diffmerge"
 cask "dozer"
+cask "fig"
 cask "figma"
 cask "firefox"
-cask "font-hack-nerd-font"
-cask "google-backup-and-sync"
+cask "font-geist-mono-nerd-font"
+cask "google-drive"
 cask "graphql-playground"
-cask "handbrake"
 cask "imageoptim"
-cask "iterm2"
-cask "kaleidoscope"
 cask "kap"
-cask "latest"
+cask "monitorcontrol"
+cask "rar"
 cask "raycast"
-cask "rightfont"
 cask "signal"
 cask "slack"
 cask "spotify"
 cask "steam"
 cask "teamviewer"
-cask "transmission"
 cask "visual-studio-code"
+cask "vlc"
+cask "wezterm"
 cask "whatsapp"
 cask "zoom"
+mas "EasyRes", id: 688211836
 mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
