chore: switch default editor from vim to nvim for AI commit

--- a/configs/lazygit/config.yml
+++ b/configs/lazygit/config.yml
@@ -21,7 +21,7 @@ customCommands:
 
   - key: '<c-a>' # ctrl + a
     description: 'Pick AI commit'
-    command: 'echo "{{.Form.Msg}}" > .git/COMMIT_EDITMSG && vim .git/COMMIT_EDITMSG && [ -s .git/COMMIT_EDITMSG ] && git commit -F .git/COMMIT_EDITMSG || echo "Commit message is empty, commit aborted."'
+    command: 'echo "{{.Form.Msg}}" > .git/COMMIT_EDITMSG && nvim .git/COMMIT_EDITMSG && [ -s .git/COMMIT_EDITMSG ] && git commit -F .git/COMMIT_EDITMSG || echo "Commit message is empty, commit aborted."'
     context: 'files'
     subprocess: true
     prompts:
