feat: integrate delta pager for git output visualization

--- a/configs/lazygit/config.yml
+++ b/configs/lazygit/config.yml
@@ -12,6 +12,10 @@ gui:
       - bold
     selectedLineBgColor:
       - '#1e2030' # Text
+git:
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never
 customCommands:
   - key: 'C'
     context: 'files'
